sentry/01-add-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
status:
  phase: Active
