sentry/03-sentry-deploy.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: sentry-db
  namespace: monitoring
  labels:
    app: sentry-db
spec:
  selector:
    matchLabels:
      app: sentry-db
  replicas: 1
  template:
    metadata:
      labels:
        app: sentry-db
    spec:
      containers:
        - name: sentry-db
          image: postgres:9.6
          ports:
            - containerPort: 5432
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: sentry-cache
  namespace: monitoring
  labels:
    app: sentry-cache
spec:
  selector:
    matchLabels:
      app: sentry-cache
  replicas: 1
  template:
    metadata:
      labels:
        app: sentry-cache
    spec:
      containers:
        - name: sentry-cache
          image: redis:3.2-alpine
          ports:
            - containerPort: 6379
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: sentry-worker
  namespace: monitoring
  labels:
    app: sentry-worker
spec:
  selector:
    matchLabels:
      app: sentry-worker
  replicas: 1
  template:
    metadata:
      labels:
        app: sentry-worker
    spec:
      containers:
        - name: sentry-worker
          image: sentry:9
          args:
          - run
          - worker
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: sentry-cron
  namespace: monitoring
  labels:
    app: sentry-cron
spec:
  selector:
    matchLabels:
      app: sentry-cron
  replicas: 1
  template:
    metadata:
      labels:
        app: sentry-cron
    spec:
      containers:
        - name: sentry-cron
          image: sentry:9
          args:
          - run
          - cron
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: sentry-web
  namespace: monitoring
  labels:
    app: sentry-web
spec:
  selector:
    matchLabels:
      app: sentry-web
  replicas: 1
  template:
    metadata:
      labels:
        app: sentry-web
    spec:
      containers:
        - name: sentry-web
          image: sentry:9
          ports:
            - containerPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: sentry-db
  namespace: monitoring
spec:
  type: ClusterIP
  selector:
    app: sentry-db
  ports:
  - port: 5432
    targetPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: sentry-cache
  namespace: monitoring
spec:
  type: ClusterIP
  selector:
    app: sentry-cache
  ports:
  - port: 6379
    targetPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: sentry-web
  namespace: monitoring
spec:
  type: ClusterIP
  selector:
    app: sentry-web
  ports:
  - port: 9000
    targetPort: 9000
